recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:3: error: value =! is not a member of Int
  while (steps=!0) {
              ^Tree:5: error: not found: value lenght
    avance(lenght*shrink:Double)
           ^Tree:7: error: not found: value lenght
    return tree(steps-1,lenght*shrink,angle,shrink)
                        ^